--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <label for="name">Country name:</label>
+        
+        <input
+        type = "text"
+        id = "name"
+        />
+        <button type="button">Submit</button>
+        <section id = "country-info">country-info
+            
+        </section>
+        <section id="bordering-countries">bordering-countries
 
+        </section>
+    </body>
+</html>
